--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.0
-    container_name: mysql-db
+    container_name: mysql_container
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: mysql
@@ -18,19 +18,19 @@ services:
       start_period: 30s
 
   redis:
-    image: redis
-    container_name: redis-server
+    image: redis:latest
+    container_name: redis_container
     restart: always
     networks:
       - redis-net
     ports:
       - "6379:6379"
 
-  backend:
+  spring_app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: spring-boot-app
+    container_name: spring_container
     restart: always
     depends_on:
       mysql:
@@ -43,6 +43,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/oops
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: mysql
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
     ports:
       - "8080:8080"
 
