--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.0
-    container_name: mysql_container
+    container_name: mysql-db
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: mysql
@@ -19,7 +19,7 @@ services:
 
   redis:
     image: redis:latest
-    container_name: redis_container
+    container_name: redis
     restart: always
     networks:
       - redis-net
@@ -43,8 +43,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/oops
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: mysql
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
+      SPRING_REDIS_HOST: redis  #추가
+      SPRING_REDIS_PORT: 6379   #추가
     ports:
       - "8080:8080"
 
