fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 HELP.md
 .gradle
 
+.env
+
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -42,13 +44,6 @@ out/
 
 ### MAC OS ###
 .DS_Store
-
-### DEV ###
-application.yml
-src/test/resources/application.yml
-src/main/resources/application-oauth.yml
-application-oauth.yml
-src/test/resources/application-oauth.yml
 
 # q type이 들어있는 generated는 무시
 /src/main/generated/build/tmp/
