--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,12 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-
+bootJar {
+    enabled = false
+}
+jar {
+    enabled = true
+}
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
