--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,12 @@ out/
 ### VS Code ###
 .vscode/
 
+### DEV ###
+#application.yml
+#src/test/resources/application.yml
+#src/main/resources/application-oauth.yml
+#application-oauth.yml
+#src/test/resources/application-oauth.yml
 
 ### VS Code ###
 .vscode/
@@ -47,4 +53,3 @@ out/
 
 # q type이 들어있는 generated는 무시
 /src/main/generated/build/tmp/
-.env
