--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
       retries: 5
       start_period: 30s
 
-#  redis:
-#    image: redis:latest
-#    container_name: redis
-#    restart: always
-#    networks:
-#      - app-net
-#    ports:
-#      - "6379:6379"
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    networks:
+      - app-net
+    ports:
+      - "6379:6379"
 
   spring_app:
     build:
@@ -40,8 +40,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/oops
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: mysql
-      #SPRING_REDIS_HOST: redis  #로컬
-      SPRING_REDIS_HOST: 10.0.6.127  #추가
+      SPRING_REDIS_HOST: redis  #로컬
+      #SPRING_REDIS_HOST: 10.0.6.127  #추가
       SPRING_REDIS_PORT: 6379   #추가
     ports:
       - "8080:8080"
