--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,26 +9,29 @@ spring:
 spring:
   datasource:
     #url: jdbc:mysql://localhost:3306/oops #로컬 mysql
-    url: jdbc:mysql://10.0.3.37:3306/oops   #docker container mysql
+    #url: jdbc:mysql://10.0.3.37:3306/oops   #docker container mysql
+    url: jdbc:mysql://${RDS_HOST}:3306/oops?serverTimezone=Asia/Seoul
     #username: root
     #password: mysql
-    username: backend_user
-    password: secure_password
+    username: ${RDS_USERNAME}
+    password: ${RDS_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
   data:
     redis:
-      #host: redis  # 로컬 Docker 네트워크 내 컨테이너 이름 사용
-      host: 10.0.6.114   # 레디스 서버 분리
+      #host: localhost  # 로컬 Docker 네트워크 내 컨테이너 이름 사용
+      #host: 10.0.6.114   # 레디스 서버 분리
+      host: redis-service  # 쿠버네티스
       port: 6379
 ---
 server:
   port: 8080
   cors:
     allowed-origins:
+      - "http://localhost"
       - "https://d3pdkkr961vb7.cloudfront.net"
       - "https://todaycoinfo.com"
       - "https://api.todaycoinfo.com"
@@ -38,3 +41,24 @@ server:
 spring:
   websocket:
     enabled: true
+---
+spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${GOOGLE_EMAIL_USERNAME}
+    password: ${GOOGLE_EMAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+            required: true
+          auth: true
+          ssl:
+            trust: smtp.gmail.com  # SSL 인증 문제 방지
+---
+logging:
+  level:
+    root: INFO
+    org.springframework.mail: DEBUG
