--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,13 +10,14 @@ spring:
   datasource:
     #url: jdbc:mysql://localhost:3306/oops #로컬 mysql
     #url: jdbc:mysql://10.0.3.37:3306/oops   #docker container mysql
-    url: jdbc:mysql://${RDS_HOST}:3306/oops?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://${RDS_HOST}:3306/oops?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true
     #username: root
     #password: mysql
     username: ${RDS_USERNAME}
     password: ${RDS_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: create
     show-sql: true
